# OmniNoval

./: Dockerfile  Makefile  README.md  conf.yaml  docker-compose.yml  main.py  pyproject.toml  server.py
src/: workflow.py
src/agents/: agents.py
src/config/agents/: __init__.py
src/config/env/: __init__.py
src/config/loader/: __init__.py
src/config/tools/: __init__.py
src/engine/: builder.py  nodes.py  types.py
src/llms/: llm.py
src/prompts/template/: __init__.py
src/tools/: bash_tool.py  browser.py  crawl.py  file_management.py  python_repl.py  search.py
src/utils/: __init__.py  json_utils.py
